# datasets

./: README.md  draw_barchart.py  file_reader_module.py  main.py  main_cli.py  menu.py  print_functions.py  pyproject.toml  v.csv
