[tool.poetry]
name = "modules"
version = "0.1.0"
description = ""
authors = ["00nx6 <lszabo958@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.1"
tk = "^0.1.0"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
